--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
+    "@mui/icons-material": "^5.15.21",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "@mui/material": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.0",
+    "@date-io/date-fns": "^2.14.0",
+    "date-fns": "^2.28.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
