--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-## A basic GitHub Actions workflow for your Quarkus application.
-
 name: CI build
 
 on:
@@ -11,6 +9,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:8.0
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: rootpassword
+          MYSQL_DATABASE: testdb
+        options: >-
+          --health-cmd="mysqladmin ping --silent"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=3
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 21
@@ -19,5 +30,17 @@ jobs:
           java-version: 21
           distribution: temurin
           cache: maven
+      - name: Wait for MySQL to be ready
+        run: |
+          for i in `seq 1 30`; do
+            nc -z localhost 3306 && echo Success && exit 0
+            echo "Waiting for MySQL..."
+            sleep 2
+          done
+          echo "MySQL did not become ready in time" && exit 1
       - name: Build
         run: cd backend && ./mvnw verify -B
+        env:
+          QUARKUS_DATASOURCE_JDBC_URL: jdbc:mysql://localhost:3306/testdb
+          QUARKUS_DATASOURCE_USERNAME: root
+          QUARKUS_DATASOURCE_PASSWORD: 123456
