--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,8 +29,7 @@ quarkus.http.auth.proactive=true
 
 # Configuracion Jackson
 quarkus.jackson.fail-on-unknown-properties=false
-quarkus.jackson.serialization.indent-output=true
-
+#quarkus.jackson.serialization.indent-output=true   Lo comento porque dice que no lo reconoce, a lo mejor 
 
 quarkus.smallrye-jwt.enabled=true
 mp.jwt.verify.publickey.location=publicKey.pem
