--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,3 +44,9 @@ jobs:
           QUARKUS_DATASOURCE_JDBC_URL: jdbc:mysql://localhost:3306/almedin
           QUARKUS_DATASOURCE_USERNAME: root
           QUARKUS_DATASOURCE_PASSWORD: 123456
+
+      - name: Installing frontend dependencess
+        run: run cd ../frontend && npm install
+
+      - name: Building frontend package
+        run: npm run build
