--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,9 @@ jobs:
           QUARKUS_DATASOURCE_PASSWORD: 123456
 
       - name: Installing frontend dependencess
-        run: run cd ../frontend && npm install
+        run: |
+          cd ../frontend
+          npm install
 
       - name: Building frontend package
         run: npm run build
