--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,4 +51,6 @@ jobs:
           npm install
 
       - name: Building frontend package
-        run: npm run build
+        run: |
+          cd frontend
+          npm run build
