fixed date and time offset issue when creating appointment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,6 +4,7 @@ quarkus.datasource.username = ${MYSQL_DB_USERNAME:root}
 quarkus.datasource.password = ${MYSQL_DB_PASSWORD:123456}
 quarkus.datasource.jdbc.url = jdbc:mysql://localhost:3306/almedin
 
+
 # Configuracion de Hibernate ORM
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
@@ -40,5 +41,9 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:5173
 quarkus.http.cors.methods=GET,PUT,POST,DELETE,PATCH,OPTIONS
 quarkus.http.cors.headers=Content-Type,Authorization
+
+# Zona horaria
+quarkus.hibernate-orm.database.timezone=America/Argentina/Buenos_Aires
+
 
 
